[package]
name = "needleman"
version = "0.2.0"
edition = "2021"
authors = ["chuxiuhong <chuxiuhong@chuxiuhong.com>"]
description = "needleman is a needleman-wunsch algorithm implement"
license = "MIT"
homepage = "https://github.com/chuxiuhong/needleman"
repository = "https://github.com/chuxiuhong/needleman"
documentation = "https://docs.rs/crate/needleman"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
